--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
-  </body>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+    <img src="https://extensionentomology.tamu.edu/files/2021/02/Danaidae_Monarch_John_Jackman-M.jpg" alt="butterfly">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/View_of_Empire_State_Building_from_Rockefeller_Center_New_York_City_dllu.jpg/800px-View_of_Empire_State_Building_from_Rockefeller_Center_New_York_City_dllu.jpg" alt="New York" title="Global city">
+    </body>
 </html>
